# ChangeLog for app-arch/par2cmdline
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/par2cmdline/ChangeLog,v 1.32 2014/04/29 09:05:37 radhermit Exp $

*par2cmdline-0.6.6 (29 Apr 2014)

  29 Apr 2014; Tim Harder <radhermit@gentoo.org> +par2cmdline-0.6.6.ebuild:
  Version bump.

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> par2cmdline-0.6.3.ebuild:
  Stable for ppc, wrt bug #502606

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> par2cmdline-0.6.3.ebuild:
  Stable for x86, wrt bug #502606

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> par2cmdline-0.6.3.ebuild:
  amd64 stable, bug #502606

*par2cmdline-0.6.5 (28 Feb 2014)

  28 Feb 2014; Tim Harder <radhermit@gentoo.org> +par2cmdline-0.6.5.ebuild,
  metadata.xml:
  Version bump, add myself as a maintainer.

*par2cmdline-0.6.3 (14 Dec 2013)

  14 Dec 2013; Samuli Suominen <ssuominen@gentoo.org> +par2cmdline-0.6.3.ebuild:
  Version bump from new upstream (BlackIkeEagle) at github. The development at
  the original source, parchive.sf.net has been stalled.

  16 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  par2cmdline-0.4-r2.ebuild:
  Update the ebuild from EAPI=0 to EAPI=4.

  16 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -par2cmdline-0.5.ebuild:
  Revert last commit because of unclear upstream status.

*par2cmdline-0.5 (15 Jan 2012)

  15 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +par2cmdline-0.5.ebuild:
  Version bump.

  15 Jan 2010; Jonathan Callen <abcd@gentoo.org> par2cmdline-0.4-r2.ebuild:
  Add prefix keywords

  29 Dec 2008; Brent Baude <ranger@gentoo.org> par2cmdline-0.4-r2.ebuild:
  Marking par2cmdline-0.4-r2 ~ppc64 for bug 251525

  18 Jun 2008; Sven Wegener <swegener@gentoo.org> -par2cmdline-0.4.ebuild,
  -par2cmdline-0.4-r1.ebuild:
  Cleanup.

  02 Jan 2008; Fabian Groffen <grobian@gentoo.org> par2cmdline-0.4.ebuild,
  par2cmdline-0.4-r1.ebuild, par2cmdline-0.4-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix