@@ -9,20 +9,22 @@ DIST par2cmdline-0.4.tar.gz 239312 SHA256 9e32b7dbcf7bca8249f98824757d4868714156
 DIST par2cmdline-0.6.3.tar.gz 822972 SHA256 903bff9d1720523683cb04db76d37169ebab3a5157f0ae1d5f9065f371929288 SHA512 c664a414ef89abf8a468b382680ba9ea97f90f6d107185ff17208cfed9c44b5aea1040632055baffa0e6bf64bd41807221c0e050e0d3d50413a6af5fa56c7f36 WHIRLPOOL 0ad5bfe1ca2d9654f9c518407fa05ea403960ed24fcf68896d12567adfc3383c57bb3fe81405f1038c7f2cae3e1cba0530dbdf7f67889f5dcc43561e5e473bd6
 DIST par2cmdline-0.6.5.tar.gz 1142005 SHA256 727d668fa932dda6a013248dc8b73e6c8805ccfa45fed6bf8d99b718bbaf44a1 SHA512 03cf4fbf9934cc9177d487849efb4eaa7e36b89c6c1fb24ce2fbd737ec86c4b3380bab856ea558c57072521076b02d680d02993d3c3be0d123162f88c5263c27 WHIRLPOOL 7e6c61ae28fe0cd280d5f2f178a3e38cce47d274b8dbf9e482613ec58e815c66925a28a691c942b5ca811c47962d7d7eb7596a64de8dba049e9f1d626c232688
 DIST par2cmdline-0.6.6.tar.gz 1142930 SHA256 48b4a9ac20e0f1a7df7228f452d93dabeedd14b25166eb67f8cf272768f7f516 SHA512 93cf0e02392a712c4d803704a2fcf3eb1829fd864d1de3c7041a76bbffcc80ed2ef330620154feb7b3431d1e7848e2521e29713cb1fc7e7294bbde27792a3f9d WHIRLPOOL 0b0e76ec195d06b3da1df4fe0cb6c198c8ae4034a1954bad13498504acab0dfa83b8e2a6ac106bc39c62a362390439d6f4762f45341e1c0716a850fe640b2ace
+DIST par2cmdline-0.6.7.tar.gz 2694499 SHA256 dd177953a2a72742bc10a08250b949aeff48c907263ea6722f4246c9d2089411 SHA512 f9a70e78f62164f7c6933b6bc9e5165caeb2b0ca81ad345ac2e58e629be313fe4a1c06d1f18c9064ee37e483e0a05f4eb244cd7a05713bed87dfac93d399b69c WHIRLPOOL 263aa31786d4eb6580587d68a8490a6ecfd8bfbdc2eaafe0cc82c445ab3d11915803f1d12363277d2b31520f654a6c7908ab336988e97ccb84b3cc7e69817ca5
 EBUILD par2cmdline-0.4-r2.ebuild 911 SHA256 4456a13762a0cc89108e991eef49037510ef7991e1fa77dabc60b46dc901b9a1 SHA512 ec08f4f6d32f74b2cd6cff8e6849dfeb66ded3bc9fc2e166376a38c66bea0c07338948e2b333919083c4a154226487d39dba1ab0ef57a2654dd31f4c27d71ffa WHIRLPOOL e38b94b315ecf98f16bb95203e5e1e756aac5428a1c252782cdcc28a10e724e8d77f3acb029ba7570a76438d847998d80233fa6358c5137fa9d67899acee2e54
 EBUILD par2cmdline-0.6.3.ebuild 699 SHA256 42423c372e5f3d1f6011bf8f53bad33de2cd70336e261be3fc3de8a1dfff1740 SHA512 9035e026bc3145ab8a026e42eaca2bf59edba2ae1379e9eb3ce46f055d95984893d62c8ca31fea50f06ba9878d2c5e61c769e485eaa3e065e4cdcb18a38239b7 WHIRLPOOL 845cd37cb075a7e9a17a91ded28e52ec35e539b513109dbd157b9884c321cccc602cbf7caba99870545b10f6db542ac12e001b5e3254585f273b72c9a8044e3a
 EBUILD par2cmdline-0.6.5.ebuild 708 SHA256 1dd94dd150c48f446495ae40b2c16186d76631186045e7d50e853d53fe6a98c3 SHA512 6c5d738499e5e500c723d44aa47edd85bad224abf7f1c4f1bf86066e081a86247d9e787fbb0eee245c9e483d7387b273e8bb35d390955b39046f06bd471615d2 WHIRLPOOL 6573030005f6e714190b19b7888f17f70246a132ac966d164cec0a841635b9fca3bb5213801de71264c080f1a9a4ad4dfdaf3c514d9efcf636f40450ddd36999
 EBUILD par2cmdline-0.6.6.ebuild 708 SHA256 61a7ea4f7a52b9e5613bd07bbfb2814976ab1e188816908ec4eadaa3130e1076 SHA512 b8a2bbf6a63a0f80c80271d5484a16b48ffb8da87f54e10b6ae71e3c509d3c651e3cff9dbcca34d1cb4599c8e48a35df316cef6e9a06ce3cf45d66493d12fc53 WHIRLPOOL 2a04d5fdddf64b879755928ec157e02427249f07937408ee2486c8109d0d3ba1f3301c919c02f2e6111e34467a8c6ec2fa85aeba4afe77f3685937158cdb88c1
-MISC ChangeLog 4440 SHA256 3be8816a91d94f9974ad6c2136ad2f00058ef1c6b96711cb950801a6bfa36c3a SHA512 6218a6e1104f6f1d787142e19fdb021c6b2a37dded814cc77d3fd70035bd51fff548cb8125f83a900b3804e2f3e92faff1b651f34469e88efee56a001c0c97a0 WHIRLPOOL 8274b28023aad514a7fdc3400a5c74d6ae49b8a5b152b42830d708e50af729cba965c3edc8901a84031c559b0ee5b136e8c144205d620c0ae1e39b0f197a59b0
+EBUILD par2cmdline-0.6.7.ebuild 708 SHA256 532b0aa89527e5a3bc71fc776ef35e486529cb18cafb6147ce2c46a3dc2c795e SHA512 b2aa68e9c38dbcc0fc7a69656e988a8e2bb8f7fcb21285770e19d367f6695fabc32bb868bc5b0cdf1996e1c57f0d0de484c5143b8be831694d300ba63265d11e WHIRLPOOL f07b1dbe574af21cb4bdee743789e3c70842244e73c408c2297f91c57b0b052e7ac2a510db6cc939224dfb214af7b9d5a2ffbe5998c9946b63c014527e3f7816
+MISC ChangeLog 4567 SHA256 8f481ddc61c73abbb01cb9f79162c3aaf1fb6f36bf1a80a937bf6567fc8df47e SHA512 22366420fc7e4dee760ed4980359f230a61c886c242d576add0a346eb8e5cee673428c5dcbe601384fa109ddd99e43d3892705570e1b31681af46fd6269d921d WHIRLPOOL b781b710f88538ce0bc3faf26e8298572b4e60a0cd67c121904300ff4543df3745490a3c765cb318eb5f7ee19c1a7c4b86cfb65f74158bc39aacf5f743208275
 MISC metadata.xml 346 SHA256 1cfb328e39126ea4b76afc2db4486a5f16ab40a76141203a63f44ac7d96cfbb5 SHA512 0dbc1ff6ffa94ad2bf9ccf8dce4af5e723f8d2cc8d585d7d44cbb3a13226a103acc4e15d328dadc9a377c9b7b42bbd7c2171b9b44e1106de2082d8dda00997d5 WHIRLPOOL 682f3ba618faa26ad905a983deb5ade2589f5199a9a7159283123fcdded397282ef072887c1eeabf1fd84e01152b20576213baeb414e41292b4668d1797aafda
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTX2tkAAoJEEqz6FtPBkyjWSEIALhyc3HVM/Vr47v0AtJZ38Ec
-teocyZlcu2wQWLHHZBFkinxLO6427cpRSWvwhc4yRLtCeIkri6X/1/Quk+Mqrt/s
-YA8LnLcgfD4ank5VG2saCVDLdQn8N+G3LJHuu3ZEJEywqEbc1NDvV77xmYc9/SY4
-dmduT3fbDsUyMZwWAjAzEZNUvs0QHILqsuMgjwLAVWT44R7PNVWqU4WncOSN6C3I
-MXdJcKA8fE//yOxkfM8RHnoEnzy/DT7bGdNbyLnGleAu3K5UYuid+T5yD7zRPkT8
-53cY87benOtBz/YyqdrR2EDH1lMegPPXdfuFZJzalMAudF+iVT24ggNCdFcpZyE=
-=BBAk
+iQEcBAEBCAAGBQJTo+5NAAoJEEqz6FtPBkyjGIAIAKovhEMgR1Nm9rlG3g7HHyxj
+f1aypXmS912aTWWzpDe8RuoMgJi8hIzGWsztvNUndWPQSSwr9er5BPjCNBWjbFco
+w8lNC/cXGRZONhtHb6MTFAcLGBlBhNgrf/OLNDTuv1iUp3cSbOaYi3tkLFAEWB85
+Q6uqPVaddi3GEoTIssYEmU0TKb430DAofgVBY0HeMJtGnqB+2EBHPr2PgvZ87m+R
+8xtnsTLkZZpqnDu7u2AewIHk+M+m4fAFKNe8oXJNTtjyk7g/fLilnj94gRQfic5T
+niWa/gecfsSFrzOcBleVehgnyVz/OGdAdhmQNGmn948EByjXeD0Dm5AV1uD+kA4=
+=Zz91
 -----END PGP SIGNATURE-----
