@@ -2,13 +2,19 @@
 Hash: SHA256
 
 DIST glossaries-3.04.zip 3838009 SHA256 7597d2b61b2a253e562e6b16c33c8db09ea9bd940968d3e5ac96857503f30669 SHA512 1669c2288c31f1b1b79dc9776c55c2abfc8fd216482cf6175e9f788a2882cfe997ca13c9d93d317e4d31fcc9eba8dc977bc806874179654141ca7235ec7c3889 WHIRLPOOL 003016d2a2aaa8241d17464b74d902f228e2aad2730804af3e41075a5bbd176284a7f69ed95493fdd02842a502afde680be0e22b13b27740996563deaf35ba93
+DIST glossaries-4.07.zip 5009472 SHA256 156a625f51adec6524e67d49128fae7e009720b0616c6d73a36ac17c3b1f1b79 SHA512 576c52b0502e9854ac1332142a724ed1b97b37502322d52195f343f864a82e249529715b0a637f984ab01662d288f2ba57f7a932d2523435d5147dfb43145d61 WHIRLPOOL 7db0548b00a3e6544bc7c1a096b645f2f9fe492ca0adc4a5d5f49e42593348b930fad587e3877c769918840c21ae95ef7321becc29a36748d4f2f15a58f190a7
 EBUILD glossaries-3.04.ebuild 1118 SHA256 0fe7ec732e505e0ccda71bab50dd3a33e421b3625cad122d55832388f629fd7e SHA512 96151988780d182dd6716dda12fa6809c67c8960ea55d46dd15d048cf08507d0ae40168e53c31b438c0885347946b25d60da038d8f24e731c254df4c87fa23ca WHIRLPOOL f93ff6078240a0f5cddea56de5aad63f4e11dd5c647b0ea2e722cef2f7f4e1cdd9440dd1ce7499403640eac02ef8f9644640de9d09868a481f936a7671ec4cba
-MISC ChangeLog 8429 SHA256 d8acb269467dc6f346ea7a6758ccd9537cce0bbe6f8c42b1a096b4c61a51d432 SHA512 4a228ed0c5512d839c78f513df1253138b12ebd792036680a099f5b97ddb3d020041a0f426129359cff354bdf5364ee5a15576a52956730bcb75afb2e44f56ea WHIRLPOOL 797ac5758bac28c15f6520408b1e598b4fd825a69e73ccc3cf7e2aad096becea0934e77273f1c2fd141f18e4e195d9305c19ab597b4d56296c3b3b0bd35d5572
+EBUILD glossaries-4.07.ebuild 1096 SHA256 dce1fd727a82b2820a0ce9a1f542d034b705f5b1106c3f2c414cdd737a183391 SHA512 8ddbf765dc7b5e1b08a1dcc4e7f293c19438cf290f5f352622b9771a632a5398cb144b852e0723d117b4d15d3fdbd9460719e23e2d61cb26af35d2eb4abfff22 WHIRLPOOL 29af1a0258c485fb48b11ee447ba6a6c51b2a7c6597d2d37152b3ffbca35487c77721d9d956f05ac62e829ba92f58eea6f948c55ae357d469a146ad4a3b8013b
+MISC ChangeLog 8553 SHA256 31819511aa7a6d898a6c3c932b97dd748997baaaa594c9b83ff3c2b5e3bfa2f8 SHA512 7aa6714cd998954c7f61919eb871886d8b5b4fc580c832cc84b9c3913d1bb0faf3d752b372a8389920001b2a379c04c70753a220241b18220432ec62d06dd77c WHIRLPOOL ccb52e57d4bc569f79e6265b3c0e37293d7fccf44013cd0c553250d8d596c72bf11ca32fb2ee877bcdb81cc827b071362c674dd4737355aac4d0c950a9729dca
 MISC metadata.xml 158 SHA256 ffac3130a9f8a11faf7d20a52ec5ef00e96d2f05e2fc98cceefdfbb9f280b8c7 SHA512 d638df9e36aa7911fef6e415f148121d6ad1d037a577c85030a12b7b9935c7735bc4abb036209fc6b0983f93f80e5729e8e3967f6a60368cc863108771f72763 WHIRLPOOL 7023db4ee3de79ad7a4e189c31004ef3c6c7a237799bd0c658d2ab96a256bf1a4dd674639ed75948141e1469fc02c8eb99edc8a1d914816548f8b26a7bce8cbd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlGWW2wACgkQvFcC4BYPU0q9/gCfTb28n7IG0ZuVk9RjonIBTJE8
-sbcAoIgPc1bC35YKOWtFAtUzXx/fFB2h
-=qvlz
+iQEcBAEBCAAGBQJTo+uLAAoJEEqz6FtPBkyjyCkH/2gschS1URAXCVgvfcXHovzf
+wVo28nhwTbFeC2lpvaOwkQPQP6lQHU/47ykpCQEWZdfbz7zfXn9qefxJ1cOx5ej+
+RQkrwG5dZdB9pOEaOGRcXxbV2StPVE93Xp61jUdV2b/mobm6ULLzmH0MCvdihsNH
+bcoCq8sUj4YLtrjVLwg/l4H3DvPSvVpQjVRd6Zl0htEVRCGFpGJhq8qHOeG3h3mG
+U2MX8wFmShOf/SGRCDqtfuDC6UBxVjZ7eKB+4mM/df7DR47d6EU4QPD71IzRVb9Z
+G7c8q3k9P4dpxYVQcBParJQqPGNT2+NNSYFW5mvla3UdnpSqwPjw6IY/uE1u+DI=
+=739c
 -----END PGP SIGNATURE-----
