@@ -1,0 +1,11 @@
+DEFINED_PHASES=prepare
+DEPEND=!<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=A PAR-2.0 file verification and repair tool
+EAPI=5
+HOMEPAGE=http://github.com/BlackIkeEagle/par2cmdline
+KEYWORDS=~amd64 ~hppa ~ppc ~ppc64 ~x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+LICENSE=GPL-2
+SLOT=0
+SRC_URI=http://github.com/BlackIkeEagle/par2cmdline/archive/v0.6.7.tar.gz -> par2cmdline-0.6.7.tar.gz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=931c69b4f9cba961a04c1be2e286f297
