@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare unpack
+DEPEND=dev-lang/perl dev-texlive/texlive-latexrecommended >=dev-texlive/texlive-latexextra-2012 app-arch/unzip virtual/latex-base >=sys-apps/texinfo-4.2-r5
+DESCRIPTION=Create glossaries and lists of acronyms.
+EAPI=5
+HOMEPAGE=http://www.ctan.org/tex-archive/help/Catalogue/entries/glossaries.html
+IUSE=doc examples
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
+LICENSE=LPPL-1.2
+RDEPEND=dev-lang/perl dev-texlive/texlive-latexrecommended >=dev-texlive/texlive-latexextra-2012 virtual/latex-base
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~radhermit/dist/glossaries-4.07.zip
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	025442f2eecab39ad0b4e541b6e142af	latex-package	999c52f495ebb8dd3b69bda982bb2817	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=e22cb7e1cd284a51f7601efd6b45c9f0
