@@ -8,22 +8,24 @@ AUX nzbget.initd 921 SHA256 5e55313eae69b0b77f4332c2ff6e74085295f6fc8469e03f53f9
 DIST nzbget-10.2.tar.gz 671808 SHA256 c9b878744c162e7721ffc8b048a2e4550a8ed8da6e706ee4cbd026ed2d612ec2 SHA512 be37d8a3a1a7899885a4186dba3bf5cee46ef325c60a0e09e9102a38f5b7694bf6e02d0794cb68a226111f4813c4d61354790710340b446edca5216f3c441b01 WHIRLPOOL 14e82696dc410caedba4b56f4c0dbab11533b981b2e5d98440de47467982d14817cb697893c0eedef4095b0dffb821bf5a878db86928b1df2afb6b88065a1990
 DIST nzbget-11.0.tar.gz 694197 SHA256 27abacf6c604969dc987b7e50689caef22a65dbb1690b020b0c6d147ae123b3d SHA512 ea3d16abb1cb0b31691c9ce5493276c6e5432f72c52ad05a7fc8ed72aafd251a725d4c87454430243cea6d79d1bd19fdfad8699727a7bd44917ad1d7bf75e323 WHIRLPOOL 5fec598b9c4441873b8d220454fb911c99e0a52a3ab45220583bced347918175cdc7a348fbddd85b2514798d4aa711941932d2fcb0df3cb9f59355070ecc5be7
 DIST nzbget-12.0.tar.gz 1114126 SHA256 023c4e3b9c7e920d9ea72b60135b438ce13543454f79984c06fd15365b9a882e SHA512 2b6be81ea60108fdb609738eb719e98af97ffcab706a5c38b6b668ff85d42609f5a3eb85f0e2dc97547bf88ef249fa9060ef4583c0b57ac7fb39e139fa897294 WHIRLPOOL 62fcdb1d9bf9a39f52aef1087ecfcc5158089a73955e357288ab6bb387c7fd0987a8178ece2424634e28478af29fdf086b622730b93771970d7f297bfe11a5be
+DIST nzbget-13.0-testing-r1042.tar.gz 1228742 SHA256 376e5b95619aab9f3fd7dbfa6c10aeaa27ef981574f1653416d97963f18c64b3 SHA512 8ba006b90577924312dac45d05b11dd746af60047d96430858bd66d97e4d6559da3530519ad854efffad8f4606cf931e03d2e7022ee621d364359ddd27ffb501 WHIRLPOOL 38bcc86b9cbd02ad0302547fda539d358f52a18133f12182451f262f1d4025c825e24b3c835632d900e56114851aa765ca1cf17d7e41a7aff0118455eb95454d
 DIST nzbget-13.0-testing-r979.tar.gz 1220682 SHA256 4ed6365f74f4ce7eae31e4fe7889ed7979d8c41b2af985bc5206a4325512d752 SHA512 488d82558fdcf553eda2ac472e5608ff46f34036635c607c8224b9d986ea920ced73bcf884648afccc94e3ec900bb33345e529f21b1d43bf859eab81b0b33a19 WHIRLPOOL af3367e911c949da4d4912b46c0a9de3c35cd515f16170f14bb93c28db25a721b9d769624438fe95b694f82174d52cefdf8e1976057ce4a4052058ec570c5396
 EBUILD nzbget-10.2.ebuild 2682 SHA256 606cafd749ee2063b94b31223f43e58c40e4393be0f07dccdbf8d743bc1f0954 SHA512 c644c4cc2d12a4667ece3e0ef8d9dba7cc9807f66cdb031d599ad38d772543cb9fcbebf3f1388b93b5ef6147d87b3415e5f0281bc2a4728fba0d1b9f2065864a WHIRLPOOL 1a48b00dc04f756f431e5333ab038b9dc1c50b3bae1ac3d1c124c16f94788838f9af2bbc89c5163d6c58f05b4040f6f3ca1b4170beeca5251ec22d9b35b7813c
 EBUILD nzbget-11.0.ebuild 2669 SHA256 df2df52cd0d3860fef04d401ac2ae58af1dd7b079536fbbad100cc8f449531bf SHA512 6de685aa0dd62161152cbbb125370e448e105e0b11373f69056fad6c8c2fab00b14e823010806a63206cd7a5584b6f4dc6120e2acf9ceef13d3b8c42707a0afd WHIRLPOOL 317401ee8097ab3639c0d56d47c023a87274126a25cd8fea0531de9f1319b36358ca665dbbab221f8dd6a1eed30b23a3047b0e86a03d3fc3792f18fed011f8e0
 EBUILD nzbget-12.0-r1.ebuild 2667 SHA256 e4e0cc6a04d168823e5bbbe2558d430b49e7615ef4175bf4c5ee2a9990c9e95d SHA512 79f270750c970055232e5e29c09e862042c08a6c836c75f610a8733278c1ceff0b417a4cde02ea18b25fc2a03d5bc1458923819ed2f000d6e3c6ce5a4a35cca0 WHIRLPOOL 96d5d6c8caae258bc5adf83020e359cb245c0d36dae2c079c4e9af4f831090c15dbc44546afb9903e187c3c64c8ff08ab26f7714261625947e90f31a9528de9d
 EBUILD nzbget-12.0.ebuild 2559 SHA256 4a4b6027a704ea1ec2bd56c8e6ff375b7afe22af639f304912fdfff2727bfa13 SHA512 156e95d4ee0dc2002305d22da9081f33d1d27f47780ac14b7ee3f140a556e99a9eb023fbc01e96013b702bc0616ae9cc70171c1d65eb27fc1fa7df98177ebb17 WHIRLPOOL 64d67f3ae9a51c157a26278fa5a274594ed5e0de8b238278bb20923b90943e55220d70383b551190fe3497c677f0c4f68dfcc6cbb8032536d53feccd06623d45
+EBUILD nzbget-13.0_pre1042.ebuild 2673 SHA256 2e55284b644855eced638d49b89bc079ba4dc2fb1e7df535a83875c8e97f5242 SHA512 6451e9c0e1f5ee228fee666473f06f3fdccbd26a34a0d5961bb44cadb55abae1af184ff6a772862e65ebcb7f81ee01b369aade49d642bc50e577640a5c49b717 WHIRLPOOL f22a8170f531278fddc4779f5f4a71ae8f1f671e16b31b192198502fd5ed7a69125ae8e6743d2e8ad857c3ed181745c8f93baea8ce6cad9613c5e9a5a5092830
 EBUILD nzbget-13.0_pre979.ebuild 2672 SHA256 94e206896c518574c60bb5edaa3420e0d2ce198abb7370638890fd7bb46aa871 SHA512 cf84320943df8991584a9d158093561dce9cc7f9c26f6e50a137aac0599f677468b6f2f36b057b672611d4a6fa3c923c0fff35954551ea7206b23bc16cf14425 WHIRLPOOL 6701b5dd6cab8c8886e4c960d763b5018f9224dae547875ece9f293ef5e603bd55137120f52b136e600ea17e1018b887b0e7be876fe92c5c7a41ede6216a6571
-MISC ChangeLog 12783 SHA256 8522f8a5761b4fef3d89bc8d8cd54d24710141ccd2e0a3b6109002f001dab70d SHA512 0d9239d8d32b87b5300686ec96469068a11eaed3372df6b69da463a20f049016cc35019581feb44136ef952725a4cafc9f76159c8b9d2e89e4de43ddfdc69af3 WHIRLPOOL 522413a62d30d4b39b2cd6d0fe342eb175e50b2a13036fc35cedb11de4217073aad9e82c0fb764a8b9f08869e7ebf584df7da27660c0b3a51f4873f1faefce09
+MISC ChangeLog 12914 SHA256 c7ce1ef47d1ae32582eccd546e9455c4200b59a9069e3f29c66851b2305803db SHA512 26ffe1c01d7357a15bce54a1162e1d5c3374d8fa489ea06aec30949889868f3a89c57147241719e0e6404723f9c713c0527da2cbf6f8f2b90e25582a019a2621 WHIRLPOOL 24c67c76158a0df6334d01122652ae1a94277439a44d00926ac8b6200c7e310283c3dc8e18cb20c68eba8ae0bb25e2123416731a53ca7afe9236647410d63d65
 MISC metadata.xml 539 SHA256 48f9bc14033c2a447322b31e146267269726e47b8925fed04eb763fae4655e31 SHA512 bb80f64f00b908a589e8c9aad6e7be82fe2d44507cf7cb625c2b718f28a62dd86b6e530be16e0cae1209109b5289829211d120db24b5c2249263a8227b18fd26 WHIRLPOOL adc2d684e0c54ad489401de1ab2a7a76307ccf7bccfd80b00aed81b3ba09983f933469b7bcb126372616e5eab52d4caa9564a9cd3f14e713acb84e35605fc2f8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTWhdrAAoJEEqz6FtPBkyj+iAIAIADjeq79h6XsixEA5wqHT2s
-RHGkgrbXZ4CUkZIUG+kIRyo5Ewnyg/lqhFnOZI/gSwx5ne3lOKJ7q42BW0fb8CS7
-emWT9XFTODy5r86vMXXJWH3vJhuweDIAWVenmWWhSd34vybYncvBRHDOV/TfHOil
-kf8dtGYJZzxcEM7u8hiDCMFMr71sIgHgYNAvGXB0DEoZF8GOxuglzLX5Roqd/8fz
-YHF5G8Ao8YjSg5T7DCvm/bxAOxTCBjG3dnHelmQ1+DXr7f5K9J8KRCm5ovW/0Nzl
-g0zbFvMAreyCT46rTSz3d+f8bV5bq+2WB6/TEPHJHV8A4XhwuB3go6VrYkQ5i/E=
-=6VO9
+iQEcBAEBCAAGBQJTo+zIAAoJEEqz6FtPBkyjN94H/RZGAQkUdInR/TT5GObo+Joj
+tcN+VoSM0hXYpumgY2hQtATYvGSJeYgLOZnbBfb9/PenvYMkaV+Qt+RfZw/6pYII
+DDZZ/CTGLsNmGTyB9iaik1iuXZse95c5cqCNOEQ7V4aGmg2SIzN+r1ARkE0tDY23
+be4v1Otji4i6bP8ywC7cPquCEMNKnjf6NPyrJEHaCiwit09a19vWKCDBX5QsMrJ4
+z5JutqB2Tx83//snpb6gU5aesxZjkRWZbnzQpFI0Z9RM8yI51zSA7UdjUWIImdyS
+E1vl36/W+sUs+kK29I5L9B3FVUBKJTNqPXKp2Oc1tIguIhBh6/0QUmmtEpsrgNs=
+=ZRd0
 -----END PGP SIGNATURE-----
