@@ -1,6 +1,11 @@
 # ChangeLog for dev-tex/glossaries
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/ChangeLog,v 1.67 2013/05/17 16:31:38 aballier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/ChangeLog,v 1.68 2014/06/20 08:06:34 radhermit Exp $
+
+*glossaries-4.07 (20 Jun 2014)
+
+  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +glossaries-4.07.ebuild:
+  Version bump.
 
   17 May 2013; Alexis Ballier <aballier@gentoo.org> -glossaries-3.01.ebuild,
   -glossaries-3.02.ebuild, -glossaries-3.03.ebuild:
