@@ -1,6 +1,11 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.85 2014/04/25 08:06:02 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.86 2014/06/20 08:11:51 radhermit Exp $
+
+*nzbget-13.0_pre1042 (20 Jun 2014)
+
+  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +nzbget-13.0_pre1042.ebuild:
+  Version bump.
 
 *nzbget-13.0_pre979 (25 Apr 2014)
 
