@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/par2cmdline
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/par2cmdline/ChangeLog,v 1.32 2014/04/29 09:05:37 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/par2cmdline/ChangeLog,v 1.33 2014/06/20 08:18:19 radhermit Exp $
+
+*par2cmdline-0.6.7 (20 Jun 2014)
+
+  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +par2cmdline-0.6.7.ebuild:
+  Version bump.
 
 *par2cmdline-0.6.6 (29 Apr 2014)
 
